Revert to v4.5.8 on NuGet to use Sqlite

--- a/src/Gistlyn.AppConsole/packages.config
+++ b/src/Gistlyn.AppConsole/packages.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ServiceStack" version="4.5.9" targetFramework="net46" />
-  <package id="ServiceStack.Client" version="4.5.9" targetFramework="net46" />
-  <package id="ServiceStack.Common" version="4.5.9" targetFramework="net46" />
-  <package id="ServiceStack.Interfaces" version="4.5.9" targetFramework="net46" />
-  <package id="ServiceStack.OrmLite" version="4.5.9" targetFramework="net46" />
-  <package id="ServiceStack.OrmLite.Sqlite" version="4.5.9" targetFramework="net46" />
-  <package id="ServiceStack.Redis" version="4.5.9" targetFramework="net46" />
-  <package id="ServiceStack.Server" version="4.5.9" targetFramework="net46" />
-  <package id="ServiceStack.Text" version="4.5.9" targetFramework="net46" />
+  <package id="ServiceStack" version="4.5.8" targetFramework="net46" />
+  <package id="ServiceStack.Client" version="4.5.8" targetFramework="net46" />
+  <package id="ServiceStack.Common" version="4.5.8" targetFramework="net46" />
+  <package id="ServiceStack.Interfaces" version="4.5.8" targetFramework="net46" />
+  <package id="ServiceStack.OrmLite" version="4.5.8" targetFramework="net46" />
+  <package id="ServiceStack.OrmLite.Sqlite.Mono" version="4.5.8" targetFramework="net46" />
+  <package id="ServiceStack.Redis" version="4.5.8" targetFramework="net46" />
+  <package id="ServiceStack.Server" version="4.5.8" targetFramework="net46" />
+  <package id="ServiceStack.Text" version="4.5.8" targetFramework="net46" />
   <package id="System.Data.SQLite.Core" version="1.0.105.0" targetFramework="net46" />
 </packages>
