--- a/src/Gistlyn.ServiceInterface/packages.config
+++ b/src/Gistlyn.ServiceInterface/packages.config
@@ -1,13 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Web.Xdt" version="1.0.0" targetFramework="net46" />
-  <package id="Mono.NuGet.Core" version="2.8.7" targetFramework="net46" />
-  <package id="ServiceStack" version="4.5.9" targetFramework="net46" />
-  <package id="ServiceStack.Client" version="4.5.9" targetFramework="net46" />
-  <package id="ServiceStack.Common" version="4.5.9" targetFramework="net46" />
-  <package id="ServiceStack.Interfaces" version="4.5.9" targetFramework="net46" />
-  <package id="ServiceStack.OrmLite" version="4.5.9" targetFramework="net46" />
-  <package id="ServiceStack.Redis" version="4.5.9" targetFramework="net46" />
-  <package id="ServiceStack.Server" version="4.5.9" targetFramework="net46" />
-  <package id="ServiceStack.Text" version="4.5.9" targetFramework="net46" />
+  <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net46" />
+  <package id="NuGet.Core" version="2.14.0" targetFramework="net46" />
+  <package id="ServiceStack" version="4.5.8" targetFramework="net46" />
+  <package id="ServiceStack.Client" version="4.5.8" targetFramework="net46" />
+  <package id="ServiceStack.Common" version="4.5.8" targetFramework="net46" />
+  <package id="ServiceStack.Interfaces" version="4.5.8" targetFramework="net46" />
+  <package id="ServiceStack.Text" version="4.5.8" targetFramework="net46" />
 </packages>
