--- a/src/Gistlyn/packages.config
+++ b/src/Gistlyn/packages.config
@@ -7,15 +7,15 @@
   <package id="Microsoft.CodeAnalysis.Scripting.Common" version="1.2.1" targetFramework="net46" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.3" targetFramework="net46" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net46" developmentDependency="true" />
-  <package id="ServiceStack" version="4.5.9" targetFramework="net46" />
-  <package id="ServiceStack.Client" version="4.5.9" targetFramework="net46" />
-  <package id="ServiceStack.Common" version="4.5.9" targetFramework="net46" />
-  <package id="ServiceStack.Interfaces" version="4.5.9" targetFramework="net46" />
-  <package id="ServiceStack.OrmLite" version="4.5.9" targetFramework="net46" />
-  <package id="ServiceStack.OrmLite.Sqlite" version="4.5.9" targetFramework="net46" />
-  <package id="ServiceStack.Redis" version="4.5.9" targetFramework="net46" />
-  <package id="ServiceStack.Server" version="4.5.9" targetFramework="net46" />
-  <package id="ServiceStack.Text" version="4.5.9" targetFramework="net46" />
+  <package id="ServiceStack" version="4.5.8" targetFramework="net46" />
+  <package id="ServiceStack.Client" version="4.5.8" targetFramework="net46" />
+  <package id="ServiceStack.Common" version="4.5.8" targetFramework="net46" />
+  <package id="ServiceStack.Interfaces" version="4.5.8" targetFramework="net46" />
+  <package id="ServiceStack.OrmLite" version="4.5.8" targetFramework="net46" />
+  <package id="ServiceStack.OrmLite.Sqlite.Mono" version="4.5.8" targetFramework="net46" />
+  <package id="ServiceStack.Redis" version="4.5.8" targetFramework="net46" />
+  <package id="ServiceStack.Server" version="4.5.8" targetFramework="net46" />
+  <package id="ServiceStack.Text" version="4.5.8" targetFramework="net46" />
   <package id="System.AppContext" version="4.0.0" targetFramework="net46" />
   <package id="System.Collections" version="4.0.10" targetFramework="net46" />
   <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net46" />
