--- a/src/Gistlyn.AppWinForms/App.config
+++ b/src/Gistlyn.AppWinForms/App.config
@@ -1,10 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/>
     </startup>
   <appSettings>
-    <add key="EnableAutoUpdate" value="true" />
-    <add key="UpdateManagerUrl" value="https://github.com/ServiceStack/Gistlyn" />
+    <add key="EnableAutoUpdate" value="true"/>
+    <add key="UpdateManagerUrl" value="https://github.com/ServiceStack/Gistlyn"/>
   </appSettings>
 </configuration>
