--- a/src/Gistlyn/Web.config
+++ b/src/Gistlyn/Web.config
@@ -1,10 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-    <!--
+  <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
     The following attributes can be set on the <httpRuntime> tag.
@@ -12,56 +12,50 @@
         <httpRuntime targetFramework="4.6" />
       </system.Web>
   -->
-    <appSettings>
-        <add key="webPages:Enabled" value="false"/>
-        <add key="DebugMode" value="true"/>
-
-        <!-- Auth config -->
-        <add key="oauth.RedirectUrl" value="http://localhost:4000/"/>
-        <!-- Should match with OAuth2's App Callback URL -->
-        <add key="oauth.CallbackUrl" value="http://localhost:4000/auth/{0}"/>
-        <!--Create GitHub App at: https://github.com/settings/applications/new -->
-
-        <add key="oauth.github.Scopes" value="user,gist"/>
-        <add key="oauth.github.ClientId" value="8e66a75de4e62dd97696"/>
-        <add key="oauth.github.ClientSecret" value="fbdd3b95497295fc0776527206c8e40159d1da6d"/>
-    </appSettings>
-    <system.web>
-        <customErrors mode="RemoteOnly" defaultRedirect="offline.html"/>
-        <authentication mode="None"/><!--mono-->
-        <compilation debug="true" targetFramework="4.6"/>
-        <httpRuntime targetFramework="4.5"/>
-        <httpHandlers>
-            <add path="*" type="ServiceStack.HttpHandlerFactory, ServiceStack" verb="*"/>
-        </httpHandlers>
-    </system.web>
-    <system.webServer>
-        <validation validateIntegratedModeConfiguration="false"/>
-        <urlCompression doStaticCompression="true" doDynamicCompression="false"/>
-        <handlers>
-            <add path="*" name="ServiceStack.Factory" type="ServiceStack.HttpHandlerFactory, ServiceStack" verb="*" preCondition="integratedMode"
-                resourceType="Unspecified" allowPathInfo="true"/>
-        </handlers>
-        <defaultDocument>
-            <files>
-                <clear/>
-                <add value="default.html"/>
-            </files>
-        </defaultDocument>
-        <staticContent>
-            <remove fileExtension=".ts"/>
-            <mimeMap fileExtension=".ts" mimeType="application/x-typescript"/>
-            <mimeMap fileExtension=".tsx" mimeType="application/x-typescript"/>
-        </staticContent>
-    </system.webServer>
-    <system.codedom>
-        <compilers>
-            <compiler language="c#;cs;csharp" extension=".cs"
-                type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-                warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701"/>
-            <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb"
-                type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-                warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
-        </compilers>
-    </system.codedom>
+  <appSettings>
+    <add key="webPages:Enabled" value="false"/>
+    <add key="DebugMode" value="true"/>
+    <!-- Auth config -->
+    <add key="oauth.RedirectUrl" value="http://localhost:4000/"/>
+    <!-- Should match with OAuth2's App Callback URL -->
+    <add key="oauth.CallbackUrl" value="http://localhost:4000/auth/{0}"/>
+    <!--Create GitHub App at: https://github.com/settings/applications/new -->
+    <add key="oauth.github.Scopes" value="user,gist"/>
+    <add key="oauth.github.ClientId" value="8e66a75de4e62dd97696"/>
+    <add key="oauth.github.ClientSecret" value="fbdd3b95497295fc0776527206c8e40159d1da6d"/>
+  </appSettings>
+  <system.web>
+    <customErrors mode="RemoteOnly" defaultRedirect="offline.html"/>
+    <authentication mode="None"/>
+    <!--mono-->
+    <compilation debug="true" targetFramework="4.6.2"/>
+    <httpRuntime targetFramework="4.5"/>
+    <httpHandlers>
+      <add path="*" type="ServiceStack.HttpHandlerFactory, ServiceStack" verb="*"/>
+    </httpHandlers>
+  </system.web>
+  <system.webServer>
+    <validation validateIntegratedModeConfiguration="false"/>
+    <urlCompression doStaticCompression="true" doDynamicCompression="false"/>
+    <handlers>
+      <add path="*" name="ServiceStack.Factory" type="ServiceStack.HttpHandlerFactory, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified" allowPathInfo="true"/>
+    </handlers>
+    <defaultDocument>
+      <files>
+        <clear/>
+        <add value="default.html"/>
+      </files>
+    </defaultDocument>
+    <staticContent>
+      <remove fileExtension=".ts"/>
+      <mimeMap fileExtension=".ts" mimeType="application/x-typescript"/>
+      <mimeMap fileExtension=".tsx" mimeType="application/x-typescript"/>
+    </staticContent>
+  </system.webServer>
+  <system.codedom>
+    <compilers>
+      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701"/>
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
+    </compilers>
+  </system.codedom>
 </configuration>
