Upgrade Sqlite to use ServiceStack.OrmLite.Sqlite

--- a/src/Gistlyn.AppWinForms/App.config
+++ b/src/Gistlyn.AppWinForms/App.config
@@ -1,10 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
     </startup>
   <appSettings>
-    <add key="EnableAutoUpdate" value="true"/>
-    <add key="UpdateManagerUrl" value="https://github.com/ServiceStack/Gistlyn"/>
+    <add key="EnableAutoUpdate" value="true" />
+    <add key="UpdateManagerUrl" value="https://github.com/ServiceStack/Gistlyn" />
   </appSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.105.2" newVersion="1.0.105.2" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
