--- a/src/Gistlyn/packages.config
+++ b/src/Gistlyn/packages.config
@@ -9,18 +9,19 @@
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net46" />
   <package id="NuGet.Core" version="2.14.0" targetFramework="net46" />
-  <package id="ServiceStack" version="4.5.8" targetFramework="net46" />
-  <package id="ServiceStack.Client" version="4.5.8" targetFramework="net46" />
-  <package id="ServiceStack.Common" version="4.5.8" targetFramework="net46" />
-  <package id="ServiceStack.Interfaces" version="4.5.8" targetFramework="net46" />
-  <package id="ServiceStack.OrmLite" version="4.5.8" targetFramework="net46" />
-  <package id="ServiceStack.OrmLite.Sqlite.Mono" version="4.5.8" targetFramework="net46" />
-  <package id="ServiceStack.Redis" version="4.5.8" targetFramework="net46" />
-  <package id="ServiceStack.Server" version="4.5.8" targetFramework="net46" />
-  <package id="ServiceStack.Text" version="4.5.8" targetFramework="net46" />
+  <package id="ServiceStack" version="4.5.12" targetFramework="net462" />
+  <package id="ServiceStack.Client" version="4.5.12" targetFramework="net462" />
+  <package id="ServiceStack.Common" version="4.5.12" targetFramework="net462" />
+  <package id="ServiceStack.Interfaces" version="4.5.12" targetFramework="net462" />
+  <package id="ServiceStack.OrmLite" version="4.5.12" targetFramework="net462" />
+  <package id="ServiceStack.OrmLite.Sqlite" version="4.5.12" targetFramework="net462" />
+  <package id="ServiceStack.Redis" version="4.5.12" targetFramework="net462" />
+  <package id="ServiceStack.Server" version="4.5.12" targetFramework="net462" />
+  <package id="ServiceStack.Text" version="4.5.12" targetFramework="net462" />
   <package id="System.AppContext" version="4.0.0" targetFramework="net46" />
   <package id="System.Collections" version="4.0.10" targetFramework="net46" />
   <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net46" />
+  <package id="System.Data.SQLite.Core" version="1.0.105.2" targetFramework="net462" />
   <package id="System.Diagnostics.Debug" version="4.0.10" targetFramework="net46" />
   <package id="System.Diagnostics.StackTrace" version="4.0.0" targetFramework="net46" />
   <package id="System.Diagnostics.Tools" version="4.0.0" targetFramework="net46" />
